# otoroshi-llm-extension

./: .env  .gitignore  A2A_DESIGN.md  AGENTS.md  NOTICE  README.md  SECURITY.md  azureopenai.js  build.sbt  langchain.xml  llmstxt.js  openapi-llm.json  openresponses-vs-openai-responses-api.md  pyproject.toml  python-deps.sh  rebuild.sh
.github/: CONTRIBUTING.md
.github/workflows/: release.yaml
docs/: 404.html  index.html  search-index.json  sitemap.xml
docs/assets/css/: styles.10a66dfd.css  styles.72c2a4ca.css  styles.e8d7b086.css
docs/assets/js/: 001a57f5.5ebd188f.js  (+1460 more)
docs/markdown-page/: index.html
docs/search/: index.html
documentation/: docusaurus.config.js  package-lock.json  package.json
documentation/docs/: cache.mdx  cost-optimization.mdx  egress-proxy-pattern.mdx  embedding-models.mdx  function-wasm-calling.mdx  guardrails.mdx  install.mdx  mcp.mdx  observability-monitoring.mdx  observability-reporting.mdx  otoroshi-assistant.mdx  overview.mdx  prompt-context.mdx  prompt-engineering.mdx  provider-validation.mdx  providers.mdx  request-validation.mdx  resilience.mdx  response-cleanup.mdx  setup-provider.mdx  try-it.mdx  websocket-validation.mdx
js-runtime/: .gitignore  esbuild.js  package.json
js-runtime/src/: runtime.d.ts  runtime.js
scripts/: anthropic-toolcall-no-stream.js  anthropic-toolcall-stream.js  openai-toolcall-no-stream.js  openai-toolcall-stream.js
scripts/meta-mcp-test/: .env.example  README.md  package.json  start-all.js  test.js
scripts/testserver/: package-lock.json  test.js
testserver/: package.json
(+643 files in other folders)
