[project]
name = "otoroshi-llm-extension"
version = "0.1.0"
description = "AConnect, setup, secure and seamlessly manage LLM models using an Universal/OpenAI compatible API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecologits>=0.8.2",
    "litellm>=1.77.0",
]

[tool.uv.workspace]
members = []
