[project]
name = "otoroshi-llm-extension"
version = "0.1.0"
description = "AConnect, setup, secure and seamlessly manage LLM models using an Universal/OpenAI compatible API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ecologits>=0.9.3",
    # litellm 1.82.7 and 1.82.8 contain a malicious .pth file that steals credentials
    # https://github.com/BerriAI/litellm/issues/24512
    "litellm<=1.82.6",
]

[tool.uv.workspace]
members = []
